feat: estilizando ui